# legacy-app

./: .gitignore  README.md  docker-compose.yml  exercises.md  package-lock.json  package.json  plan.md  pom.xml
.devcontainer/: devcontainer-lock.json  devcontainer.json
scripts/: dev-banner.mjs  generate_report.py  import_assets.py  with-java11
scripts/data/: sample_import.csv
services/assets-svc/: AssetsService.csproj  Dockerfile  Program.cs  README.md
services/assets-svc/Data/: AssetsDb.cs  SeedData.cs
services/assets-svc/Endpoints/: AssetEndpoints.cs
services/assets-svc/Models/: Asset.cs
services/assets-svc/Tests/: AssetsDbTests.cs  AssetsService.Tests.csproj  SmokeTests.cs
services/audit-svc/: Dockerfile  README.md  pom.xml
services/auth-svc/: Dockerfile  README.md  pom.xml
services/notifications-svc/: Dockerfile  README.md  pyproject.toml
services/notifications-svc/app/: main.py
services/reporting-svc/: Dockerfile  README.md  pyproject.toml  sample_import.csv
services/reporting-svc/app/: main.py
services/reporting-svc/app/legacy/: format_helpers.py
services/reporting-svc/app/routers/: imports_.py  reports.py
services/reporting-svc/tests/: README.txt
services/web/: Dockerfile  README.md  astro.config.mjs  package-lock.json  package.json
services/web/src/components/: StatusBadge.astro
services/web/src/layouts/: Layout.astro
services/web/src/pages/: index.astro  reports.astro
services/workforce-svc/: Dockerfile  README.md  pom.xml
src/main/resources/: application.properties  data.sql  schema.sql
tools/: seedgen.py
(+60 files in other folders)
