[project]
name = "notifications-svc"
version = "0.1.0"
description = "Webhook receiver + email/Slack stub for AssetTrack"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.47.0",
    "pydantic==2.13.4",
]

[tool.setuptools.packages.find]
include = ["app*"]
