[project]
name = "reporting-svc"
version = "0.1.0"
description = "AssetTrack reports + CSV bulk import (Python FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.47.0",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "python-multipart==0.0.20",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.13",
]
